# llm-thermometer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: jekyll-gh-pages.yml
docs/: index.md
docs/reports/: 20250228T195628.md  20250303T144808.md  20250303T193518.md  20250303T204220.md  20250304T000411.md  20250304T003734.md  20250304T080143.md  20250304T140043.md  20250305T170658.md
docs/reports/20250228T195628/: 20250228T195628.md
src/llm-thermometer/: generate.py
src/llm_thermometer/: cli.py  generate.py  measure.py  models.py  report.py
src/llm_thermometer/templates/: index.md.jinja  report.md.jinja
