[project]
name = "llm-thermometer"
version = "0.0.0"
description = "Extimate temperature values of LLMs from generated text"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.ruff.lint]
extend-select = ["I"]
task-tags = ["FIXME", "TODO", "HACK", "WARN", "PERF", "NOTE", "TEST"]

[tool.pyright]
typeCheckingMode = "basic"

[tool.commitizen]
tag_format = "v$major.$minor.$patch$prerelease"
version_files = ["pyproject.toml"]
bump_message = "chore(release): $current_version → $new_version"
update_changelog_on_bump = true
annotated_tag = true
gpg_sign = true
major_version_zero = false
version_provider = "pep621"
