[project]
name = "llm_thermometer"
version = "0.3.0"
description = "Extimate temperature values of LLMs from generated text"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["openai>=1.64.0", "pydantic>=2.10.6", "tqdm>=4.67.1"]

[project.scripts]
llm-thermometer = "llm_thermometer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I"]
task-tags = ["FIXME", "TODO", "HACK", "WARN", "PERF", "NOTE", "TEST"]

[tool.pyright]
typeCheckingMode = "basic"

[tool.commitizen]
tag_format = "v$major.$minor.$patch$prerelease"
version_files = ["pyproject.toml", "src/llm_thermometer/__init__.py"]
bump_message = "chore(release): $current_version → $new_version"
update_changelog_on_bump = true
annotated_tag = true
gpg_sign = true
major_version_zero = false
version_provider = "pep621"
